--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,124 +1,3 @@
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--< android:LinearLayout-->
-<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:id="@+id/tvsongName"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:gravity="center"-->
-<!--    android:orientation="vertical"-->
-<!--    tools:context=".MainActivity">-->
-
-<!--    &lt;!&ndash;    <TextView&ndash;&gt;-->
-<!--    &lt;!&ndash;        android:layout_width="wrap_content"&ndash;&gt;-->
-<!--    &lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
-<!--    &lt;!&ndash;        android:text="Hello World!"&ndash;&gt;-->
-<!--    &lt;!&ndash;        app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-<!--    &lt;!&ndash;        app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-<!--    &lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
-<!--    &lt;!&ndash;        app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView"-->
-<!--        android:layout_width="250dp"-->
-<!--        android:layout_height="250dp"-->
-<!--        android:layout_centreInParent="true"-->
-<!--        android:src="@drawable/musicicon" />-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/idLayout"-->
-<!--        android:weightSum="3"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="15dp"-->
-<!--        android:orientation="horizontal"></LinearLayout>-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text=" songName:Nakupenda" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/ivnext"-->
-<!--        android:layout_width="60dp"-->
-<!--        android:layout_height="100dp"-->
-
-<!--        android:layout_marginLeft="90dp"-->
-<!--        android:layout_marginTop="170px"-->
-
-<!--        android:layout_weight="1"-->
-<!--        app:srcCompat="@drawable/baseline_navigate_next_24" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/ivprevious"-->
-<!--        android:layout_width="60dp"-->
-<!--        android:layout_height="100dp"-->
-<!--        android:layout_marginRight="170dp"-->
-<!--        android:layout_marginBottom="350dp"-->
-<!--        android:layout_weight="1"-->
-<!--        app:srcCompat="@drawable/baseline_navigate_before_24" />-->
-
-
-<!--</LinearLayout>-->
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout-->
-<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:id="@+id/tvsongName"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:gravity="center"-->
-<!--    android:orientation="vertical"-->
-<!--    tools:context=".MainActivity">-->
-
-<!--    &lt;!&ndash; TextView, ImageView, and other views... &ndash;&gt;-->
-<!--    <ImageView-->
-<!--        android:id="@+id/ivimage"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:srcCompat="@drawable/musicicon" />-->
-
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/idLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="15dp"-->
-<!--        android:orientation="horizontal">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/ivprevious"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="100dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:src="@drawable/baseline_navigate_before_24" />-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/ivnext"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="100dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:src="@drawable/baseline_navigate_next_24" />-->
-
-<!--    </LinearLayout>-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="songName: Nakupenda" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/ivplaybutton"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:srcCompat="@drawable/baseline_play_arrow_24" />-->
-
-
-<!--</LinearLayout>-->
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -172,6 +51,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="songName: Nakupenda" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
+        android:progress="0"
+        android:max="100"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
 
